--- a/Requirements/main.tex
+++ b/Requirements/main.tex
@@ -83,11 +83,14 @@
   \begin{itemize}
     \item Autenticación simple para empresas \\
       posibilidad de usar la api de google para facil ingreso.
+    \item Sistema de comentarios \\
+      Los usuarios deberan poder dejar comentarios en los eventos a los que han asistido.
   \end{itemize}
 
 \subsection{Won't have}
   \begin{itemize}
-    \item a \\
+    \item Payment system for users \\
+      La app se mantendra gratuita para los usuarios
   \end{itemize}
 
 \section{Requesitos No Funcionales}
