--- a/Requirements/main.tex
+++ b/Requirements/main.tex
@@ -77,6 +77,8 @@
       Mostrar en el mapa de la aplicación la ubicacion del usuario en tiempo real.
     \item Visualización de ofertas \\
       Los usuario deben ser capaces de visualizar las diversas ofertas correspondientes a eventos que hallan seleccionado o no, junto con la infomación detallada y restricciones de la oferta.
+    \item Visualización de rutas compartidas \\
+      Los usuarios deberan poder compartir y visualizar rutas populares
   \end{itemize}
 
 \subsection{Could have}
@@ -91,6 +93,9 @@
   \begin{itemize}
     \item Payment system for users \\
       La app se mantendra gratuita para los usuarios
+    \item Social network interactions \\
+      La app no tendra interacciones entre usuarios mas alla de los comentarios y las rutas compartidas
+
   \end{itemize}
 
 \section{Requesitos No Funcionales}
@@ -115,6 +120,12 @@
       Los eventos deberan poder ser calificados por los usuarios, esto funcionara con un sistema tipo Proof of Steak
     \item Jerarquización de eventos en base a su califiación \\
       Los eventos mostrados al usuario deberan tener una jerarquización adicional en función de su califiación
+  \end{itemize}
+
+\subsection{Wont have}
+  \begin{itemize}
+    \item  \\
+      La ruta debera ofrecer alternativas interesantes para el turista en base a eventos o locales que podrían ser de su interes.
   \end{itemize}
 
 \printbibliography[title={Bibliography}]
